--- a/MVVM/View/AllRandomAttributeRollView.xaml
+++ b/MVVM/View/AllRandomAttributeRollView.xaml
@@ -9,6 +9,17 @@
              d:DataContext="{d:DesignInstance Type=vm:AllRandomAbilityRollViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="{StaticResource EXPLightBlueBrush}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <custom:CutCorner Grid.Row="1" BorderCuts="0,0,1,1" Margin="40,0" Padding="15,15,15,5" BorderThickness="0" HasShadow="0">
             <Grid>
@@ -30,7 +41,7 @@
                     <!--<ColumnDefinition/>-->
                 </Grid.ColumnDefinitions>
                 <Button Grid.Row="9" Content="🎲 Roll all 🎲" Grid.ColumnSpan="3" Command="{Binding RollAllRandomAbilityCommand}" 
-                BorderThickness="1" BorderBrush="{StaticResource EXPLightBlueBrush}" Margin="0,5,0,5"/>
+                    BorderThickness="1" BorderBrush="{StaticResource EXPLightBlueBrush}" Margin="0,5,0,5"/>
 
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" >
                     <Grid>
