--- a/MVVM/View/CharacterProfessionView.xaml
+++ b/MVVM/View/CharacterProfessionView.xaml
@@ -15,6 +15,7 @@
         <conv:SocialClassToProfessionSelectorIsEnabledConverter x:Key="SocialClassToProfessionSelectorIsEnabledConverter"/>
         <conv:NullToHiddenVisibilityConverter x:Key="NullToHiddenVisibilityConverter"/>
         <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conv:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
     </UserControl.Resources>
     <Grid >
         <Grid.ColumnDefinitions>
@@ -33,7 +34,8 @@
             />
 
 
-        <Grid Grid.Column="0" Grid.Row="1" Margin="0,10,0,0">
+        <Grid Grid.Column="0" Grid.Row="1" Margin="0,10,0,0"
+              IsEnabled="{Binding IsSelectionLocked, Converter={StaticResource InverseBooleanConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -85,16 +87,19 @@
          />
         </Grid>
 
-        <StackPanel Grid.Column="1" Margin="0,5,0,0" Grid.Row="1">
+        <StackPanel Grid.Column="1" Margin="0,5,0,0" Grid.Row="1"
+                    IsEnabled="{Binding IsSelectionLocked, Converter={StaticResource InverseBooleanConverter}}"
+                    >
             <custom:CutCorner Margin="25,5,25,5" Padding="5" HasShadow="0" BorderThickness="0" BorderCuts="1,0,1,0" Grid.Row="1" VerticalAlignment="Top" 
                               Visibility="{Binding SelectedProfession, Converter={StaticResource NullToHiddenVisibilityConverter}}">
-                
+
                 <StackPanel>
                     <DockPanel Margin="5" >
                         <Label Content="Choose a Focus:" Width="100"/>
                         <Image DockPanel.Dock="Left" Visibility="{Binding HasProfessionFocusConflict, Converter={StaticResource BoolToVisibilityConverter}}" 
                                ToolTipService.InitialShowDelay="0"
                                ToolTipService.Placement="Top"
+                               ToolTipService.ShowOnDisabled="True"
                                Source="\Images\pngwing.png" Width="18" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"
                                RenderOptions.BitmapScalingMode="Fant">
                             <Image.ToolTip>
@@ -120,7 +125,7 @@
                             </ComboBox.ItemTemplate>
                         </ComboBox>
                     </DockPanel>
-                    
+
                     <DockPanel Margin="5" >
                         <Label Content="Choose a Talent:" Width="123"/>
                         <ComboBox Template="{DynamicResource ExpanseComboBoxTemplate}"
@@ -134,6 +139,7 @@
                               SelectionChanged="Combo_SelectionChanged"                                     
                               FontWeight="Semibold"
                               ToolTipService.Placement="Left"
+                              ToolTipService.ShowOnDisabled="True"
                         >
                             <ComboBox.ToolTip>
                                 <ToolTip Background="Transparent" BorderThickness="0">
@@ -147,7 +153,8 @@
                                 <DataTemplate>
                                     <TextBlock Text="{Binding TalentName}" x:Name="talenttext" VerticalAlignment="Center"
                                                ToolTipService.Placement="Left"
-                                               ToolTipService.InitialShowDelay="0">
+                                               ToolTipService.InitialShowDelay="0"
+                                               ToolTipService.ShowOnDisabled="True">
                                         <TextBlock.ToolTip>
                                             <ToolTip Background="Transparent" BorderThickness="0">
                                                 <user:TalentToolTip DataContext="{Binding}"/>
@@ -167,6 +174,15 @@
                 Foreground="{StaticResource EXPLightBlueBrush}" FontWeight="SemiBold"
            />
         </StackPanel>
+
+
+        <Grid Name="lockerGrid" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" Margin="0,0,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <user:CharacterCreationLockButton Grid.Column="1" />
+        </Grid>
     </Grid>
 
 
